gateway/multi-tenant/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ace
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
