gateway/multi-tenant/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: demo
spec:
  gatewayClassName: ace
  listeners:
    - name: a
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
    - name: b
      protocol: HTTP
      port: 8081
      allowedRoutes:
        namespaces:
          from: All
