gateway/multi-tenant/gateway2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway2
  namespace: demo
spec:
  gatewayClassName: ace
  listeners:
    - name: a
      protocol: HTTP
      port: 8082
      allowedRoutes:
        namespaces:
          from: All
    - name: b
      protocol: HTTP
      port: 8083
      allowedRoutes:
        namespaces:
          from: All
