gateway/multi-tenant/merge_gateway1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-merged-gateway1
  namespace: demo
spec:
  gatewayClassName: ace-merged
  listeners:
    - name: a
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
    - name: b
      protocol: HTTP
      port: 8081
      allowedRoutes:
        namespaces:
          from: All
