gateway/multi-tenant/merge_gateway2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-merged-gateway2
  namespace: demo
spec:
  gatewayClassName: ace-merged
  listeners:
    - name: c
      protocol: HTTP
      port: 8082
      allowedRoutes:
        namespaces:
          from: All
    - name: d
      protocol: HTTP
      port: 8083
      allowedRoutes:
        namespaces:
          from: All
