gateway/multi-tenant/a-backend-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a-backend-route
  namespace: a
spec:
  parentRefs:
    - name: my-gateway
      namespace: demo
      sectionName: a
#  hostnames:
#    - "a-backend.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # Backend services to send traffic to
      backendRefs:
        - name: app-v1
          port: 80

---
