gateway/multi-tenant/merge_b-backend-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: b-backend-route-merged
  namespace: b
spec:
  parentRefs:
    - name: my-merged-gateway2
      namespace: demo
      sectionName: c
  #  hostnames:
  #    - "a-backend.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # Backend services to send traffic to
      backendRefs:
        - name: app-v1
          port: 80

---
